--- a/Fekrah/API/ClientApp/src/app/Shared/components/card/card.component.scss
+++ b/Fekrah/API/ClientApp/src/app/Shared/components/card/card.component.scss
@@ -39,6 +39,7 @@
   margin-bottom: 20px;
   position: relative;
 
+
   &:hover {
     transform: translateY(-5px);
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
@@ -130,7 +131,7 @@
   .action-buttons {
     display: flex;
     gap: 15px;
-    align-items: center;
+    // align-items: center;
     justify-content: center;
     margin-bottom: 15px;
   }
@@ -171,4 +172,73 @@
   .view-icon i {
     font-size: 18px;
   }
+}
+
+.add-icon {
+  background-color:#9ead0f; // أخضر
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 42px;
+  height: 42px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, transform 0.3s;
+
+  i {
+    font-size: 18px;
+  }
+
+  &:hover {
+    background-color: #059669;
+    transform: scale(1.1);
+  }
+}
+
+
+.ribbon {
+  position: absolute;
+  top: 18px;
+  left: -40px;
+  width: 160px;
+  padding: 5px 0;
+  background-color: #16a34a;
+  color: white;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  transform: rotate(-45deg);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+}
+
+
+.grade-ribbon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 4px 10px;
+  font-size: 12px;
+  font-weight: bold;
+  border-radius: 8px;
+  z-index: 2;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.grade-primary {
+  background-color: #10b981; // أخضر
+  color: white;
+}
+
+.grade-secondary {
+  background-color: #3b82f6; // أزرق
+  color: white;
+}
+
+.grade-default {
+  background-color: #6b7280; // رمادي
+  color: white;
 }
