--- a/Fekrah/API/ClientApp/src/app/core/features/home/home.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/home.component.scss
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: row;
   transition: all 0.5s ease;
-  margin-top: 20px;
+  // margin-top: 20px;
 }
 
 /* ✅ Sidebar الفلتر */
