--- a/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
@@ -45,14 +45,14 @@
     </aside>
     <!-- ✅ المحتوى الرئيسي -->
     <section class="parts-section" [class.shrink]="filtersOpened">
-      <a routerLink="home/offers" class="promo-strip">
+      <!-- <a routerLink="home/offers" class="promo-strip">
         🔥 خصومات صيفية تصل إلى 50% على جميع قطع الغيار! 🔥
-      </a>
+      </a> -->
+      <app-categories></app-categories>
 
       <app-banner></app-banner>
       <app-featured-sellers></app-featured-sellers>
 
-      <app-categories></app-categories>
       <app-offers></app-offers>
       <app-part-preview></app-part-preview>
 
