--- a/Fekrah/API/ClientApp/src/app/app.component.html
+++ b/Fekrah/API/ClientApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-promo-ticker></app-promo-ticker>
+<!-- <app-promo-ticker></app-promo-ticker> -->
 
 
 <main class="main-content">
