--- a/Fekrah/API/ClientApp/src/styles.scss
+++ b/Fekrah/API/ClientApp/src/styles.scss
@@ -1,3 +1,6 @@
+$primary-color: #0d6efd;
+$medium-gray: #0d6efd;
+
 body {
   direction: rtl;
   text-align: right;
@@ -14,4 +17,11 @@ button {
   font-family: "Almarai", sans-serif;
   font-weight: 400;
   box-sizing: border-box;
+}
+
+* {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
